tests/reference/asr-implicit3-98dd19d.stderr
semantic error: Implicit typing is not allowed, enable it by using --implicit-typing 
 --> tests/errors/implicit3.f90:3:1
  |
3 | implicit real (a)
  | ^^^^^^^^^^^^^^^^^^ 
